RESOLVED FIXED232324
REGRESSION (iOS 15): Touch events are not fired during quick successive taps
https://bugs.webkit.org/show_bug.cgi?id=232324
Summary REGRESSION (iOS 15): Touch events are not fired during quick successive taps
Aditya Keerthi
Reported 2021-10-26 12:09:57 PDT
1. Visit http://dmitry.gr/89 2. Wait for the app to load 3. Perform three quick successive taps on the "7" button 4. Observe the display only shows "77" (it should show "777")
Attachments
Patch (2.89 KB, patch)
2021-10-26 12:41 PDT, Aditya Keerthi
wenson_hsieh: review+
Patch for landing (3.00 KB, patch)
2021-10-26 13:09 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-10-26 12:10:11 PDT
Aditya Keerthi
Comment 2 2021-10-26 12:41:04 PDT
Wenson Hsieh
Comment 3 2021-10-26 12:44:10 PDT
Comment on attachment 442520 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=442520&action=review r=mews! > Source/WebKit/ChangeLog:24 > + dependency to the "delayed resettable" subgraph. This ensures the Nit - it might be nice to also include that the connection to the "delayed resettable" subgraph was by way of UIKit's exclusion gestures that control context menu presentation (for future reference).
Aditya Keerthi
Comment 4 2021-10-26 13:09:31 PDT
Created attachment 442522 [details] Patch for landing
Aditya Keerthi
Comment 5 2021-10-26 13:10:20 PDT
(In reply to Wenson Hsieh from comment #3) > Comment on attachment 442520 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=442520&action=review > > r=mews! > > > Source/WebKit/ChangeLog:24 > > + dependency to the "delayed resettable" subgraph. This ensures the > > Nit - it might be nice to also include that the connection to the "delayed > resettable" subgraph was by way of UIKit's exclusion gestures that control > context menu presentation (for future reference). Added.
EWS
Comment 6 2021-10-27 09:32:34 PDT
Committed r284924 (243595@main): <https://commits.webkit.org/243595@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442522 [details].
Note You need to log in before you can comment on or make changes to this bug.